k8s/base/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: mood-app
spec:
  selector:
    app: mood-app
  ports:
    - name: http
      port: 80
      targetPort: envoy-http
  type: ClusterIP
